@@ -16,6 +16,8 @@ cdbs (0.4.52) UNRELEASED; urgency=low
   * Changed control fields XS-Vcs-* to Vcs-*
   * cdbs-edit-patch: ignore *.orig and *~ (closes: #449469)
   * Added call to dh_lintian if available (debhelper.mk) (closes: #467570)
+  * Documented a particular issue with debug packages affecting DEB_DESTDIR
+    (closes: #380614)
 
  -- Peter Eisentraut <petere@debian.org>  Fri, 28 Mar 2008 14:53:30 +0100
 
